--- a/.env.example
+++ b/.env.example
@@ -1,52 +1,23 @@
-# Google Cloud Configuration
+# Minimal required environment variables for AI Trip Planner Agent
+
+# Google Cloud Configuration (REQUIRED)
 GOOGLE_CLOUD_PROJECT=your-project-id
-GOOGLE_CLOUD_LOCATION=us-central1
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
-GOOGLE_APPLICATION_CREDENTIALS=/path/to/your/service-account-key.json
 
-# Database Configuration
-DATABASE_URL=sqlite:///./trip_planner.db
-# For PostgreSQL: DATABASE_URL=postgresql://username:password@localhost/trip_planner
-# For MySQL: DATABASE_URL=mysql+pymysql://username:password@localhost/trip_planner
+# Optional Google Cloud Configuration (will use defaults if not set)
+# GOOGLE_CLOUD_LOCATION=us-central1
+# GOOGLE_APPLICATION_CREDENTIALS=/path/to/your/service-account-key.json
+GOOGLE_APPLICATION_CREDENTIALS=./gcp-config.json
 
-# API Configuration
-API_VERSION=1.0.0
-DEBUG_MODE=false
+USE_FIRESTORE=true
+FIRESTORE_PROJECT_ID="project-id"
+FIRESTORE_CREDENTIALS=".firebase-config from service account json" 
+FIRESTORE_TRIPS_COLLECTION=trips  
+
+# Basic API Configuration
+DEBUG_MODE=true
 API_HOST=0.0.0.0
 API_PORT=8000
 
-# Rate Limiting (requests per minute)
-PLACES_API_RATE_LIMIT=100
-VERTEX_AI_RATE_LIMIT=60
-
-# Caching
-REDIS_URL=redis://localhost:6379
-CACHE_TTL_SECONDS=3600
-
-# Logging
-LOG_LEVEL=INFO
-LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
-
-# Trip Planning Limits
-MAX_TRIP_DURATION_DAYS=30
-MAX_GROUP_SIZE=20
-MIN_BUDGET=100.0
-MAX_BUDGET=100000.0
-
-# Performance Settings
-MAX_PLACES_PER_CATEGORY=25
-MAX_API_CALLS_PER_REQUEST=200
-REQUEST_TIMEOUT_SECONDS=300
-
-# Security (for production)
-SECRET_KEY=your-secret-key-here
-ALLOWED_HOSTS=localhost,127.0.0.1,your-domain.com
-
-# Monitoring (optional)
-SENTRY_DSN=your-sentry-dsn-here
-
-# Email notifications (optional)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
+# Database (uses SQLite by default - no setup required)
+# DATABASE_URL=sqlite:///./trip_planner.db
