--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,7 @@ googlemaps>=4.10.0
 vertexai>=1.38.0
 google-cloud-firestore>=2.16.0
 
-# Database dependencies
-sqlalchemy>=2.0.0
-alembic>=1.12.0
-psycopg2-binary>=2.9.0  # For PostgreSQL support
-pymysql>=1.1.0  # For MySQL support
+# Database dependencies (removed SQL stack; using Firestore only)
 
 # Data validation and serialization
 pydantic>=2.0.0
