--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ __pycache__/
 *$py.class
 
 config
-# gcp-config.json
-# firebase-config.json
+gcp-config.json
+firebase-config.json
 
 # C extensions
 *.so
