feat: AI travel assistant backend done

--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,16 @@ GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 # GOOGLE_APPLICATION_CREDENTIALS=/path/to/your/service-account-key.json
 GOOGLE_APPLICATION_CREDENTIALS=./gcp-config.json
 
+# Firestore Configuration
 USE_FIRESTORE=true
 FIRESTORE_PROJECT_ID="project-id"
 FIRESTORE_CREDENTIALS=".firebase-config from service account json" 
 FIRESTORE_TRIPS_COLLECTION=trips  
+
+# Firebase Authentication (for WebSocket chat assistant)
+# This can be the same as FIRESTORE_CREDENTIALS if using the same project
+# Required for WebSocket authentication with Firebase ID tokens
+FIREBASE_SERVICE_ACCOUNT_PATH=./firebase-config.json
 
 # Basic API Configuration
 DEBUG_MODE=true
