--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ google-cloud-aiplatform>=1.38.0
 googlemaps>=4.10.0
 vertexai>=1.38.0
 google-cloud-firestore>=2.16.0
+firebase-admin>=6.7.0
 
 # Database dependencies (removed SQL stack; using Firestore only)
 
